fixes image spacing

--- a/css/pages/activities.css
+++ b/css/pages/activities.css
@@ -202,7 +202,7 @@
   text-align: center;
   letter-spacing: 0.1em;
   color: white;
-  margin-bottom: 50px;
+  margin-bottom: 37px;
   padding-top: 30px;
   font-weight: 400;
 }
@@ -341,8 +341,8 @@
 
   .bg h2 {
     font-size: 32px !important;
-    padding-top: 30px;
-    margin-bottom: 20px;
+    padding-top: 37px;
+    margin-bottom: 18px;
     padding-bottom: 0;
 
   }
@@ -492,7 +492,7 @@
   }
 
   .tosee h2 {
-    padding-bottom: 10px;
+
   }
 
 }
