--- a/css/pages/info.css
+++ b/css/pages/info.css
@@ -162,6 +162,7 @@
 .grid-team h3 {
   font-family: Tiempos Fine Test;
   font-weight: 500;
+  padding-bottom: 4px;
   font-size: 20.1854px;
   text-align: center;
   letter-spacing: 0.1em;
@@ -319,6 +320,7 @@
   .grid-container h2 {
     font-size: 27px;
     text-align: center;
+    margin-bottom: 14px;
   }
 
   .grid-container p {
